SonarBug Fixes for ReportService class.