@@ -66,7 +66,7 @@ import com.mediamath.terminalone.utils.Utility;
 
 public class ReportService {
 
-  private static final String YYYY_MM_DD_HH_MM_SS = "yyyy_MM_dd_hh_mm_ss";
+  private static final String UTF_8 = "UTF-8";
 
   private static final Logger logger = LoggerFactory.getLogger(ReportService.class);
 
@@ -118,7 +118,7 @@ public class ReportService {
       // time rollup.
       filterTimeRollUp(report, path);
 
-      // time_ window || start_date || end_date
+      // time_ window or start_date or end_date
       filterTimeWindowStartDateEndDate(report, path);
 
       // order
@@ -129,7 +129,7 @@ public class ReportService {
 
       // precision
       if (report.getPrecision() > 0) {
-        path.append("&" + String.valueOf(report.getPrecision()));
+        path.append("&" + report.getPrecision());
       }
 
     } catch (UnsupportedEncodingException exception) {
@@ -157,7 +157,7 @@ public class ReportService {
   }
 
   private void filterOrder(ReportCriteria report, StringBuilder path) {
-    if (report.getOrder() != null && report.getOrder().size() > 0 && !report.getOrder().isEmpty()) {
+    if (report.getOrder() != null && !report.getOrder().isEmpty()) {
 
       uriAppender(path);
 
@@ -181,9 +181,7 @@ public class ReportService {
 
       path.append("time_window=" + report.getTime_window());
 
-    } else if (report.getTime_window() == null && report.getStart_date() != null
-        && !report.getStart_date().isEmpty() && report.getEnd_date() != null
-        && !report.getEnd_date().isEmpty()) {
+    } else if (checkTimeWindow(report) && checkStartDate(report) && checkEndDate(report)) {
 
       uriAppender(path);
 
@@ -191,6 +189,18 @@ public class ReportService {
       path.append("&end_date=" + report.getEnd_date());
 
     }
+  }
+  
+  private boolean checkEndDate(ReportCriteria report) {
+    return report.getEnd_date() != null && !report.getEnd_date().isEmpty();
+  }
+  
+  private boolean checkStartDate(ReportCriteria report) {
+    return report.getStart_date() != null && !report.getStart_date().isEmpty();
+  }
+
+  private boolean checkTimeWindow(ReportCriteria report) {
+    return report.getTime_window() == null;
   }
 
   private void filterTimeRollUp(ReportCriteria report, StringBuilder path) {
@@ -203,8 +213,7 @@ public class ReportService {
 
   private void filterMetrics(ReportCriteria report, StringBuilder path)
       throws UnsupportedEncodingException {
-    if (report.getMetrics() != null && report.getMetrics().size() > 0
-        && !report.getMetrics().isEmpty()) {
+    if (report.getMetrics() != null && !report.getMetrics().isEmpty()) {
 
       if (path.indexOf("?") == -1) {
         path.append("?metrics=");
@@ -220,12 +229,13 @@ public class ReportService {
           buffer.append("," + metric);
         }
       }
-      path.append(URLEncoder.encode(buffer.toString(), "UTF-8"));
+      path.append(URLEncoder.encode(buffer.toString(), UTF_8));
     }
   }
 
   private void addHaving(ReportCriteria report, StringBuilder path)
       throws UnsupportedEncodingException {
+       
     if (report.getHaving() != null && !report.getHaving().isEmpty()) {
 
       if (path.indexOf("?") == -1) {
@@ -234,30 +244,44 @@ public class ReportService {
         path.append("&having=");
       }
 
-      StringBuilder buffer = new StringBuilder();
-      int havingSize = 0;
-      for (Having having : report.getHaving()) {
-        if (having.getKey() != null && having.getOperator() != null && having.getValue() != null
-            && !having.getKey().isEmpty() && !having.getOperator().isEmpty()
-            && !having.getValue().isEmpty()) {
-
-          buffer.append(having.getKey() + having.getOperator() + having.getValue());
-
-          if (havingSize != report.getHaving().size() - 1) {
-            buffer.append("&");
-          }
-          havingSize++;
-        }
-      }
+      StringBuilder buffer = buildHavingCriteria(report);
       // encode
-      path.append(URLEncoder.encode(buffer.toString(), "UTF-8"));
+      path.append(URLEncoder.encode(buffer.toString(), UTF_8));
     }
+  }
+
+  private StringBuilder buildHavingCriteria(ReportCriteria report) {
+    StringBuilder buffer = new StringBuilder();
+    int havingSize = 0;
+    for (Having having : report.getHaving()) {
+      if (checkHavingKey(having) && checkHavingOperator(having) && checkHavingValue(having)) {
+
+        buffer.append(having.getKey() + having.getOperator() + having.getValue());
+
+        if (havingSize != report.getHaving().size() - 1) {
+          buffer.append("&");
+        }
+        havingSize++;
+      }
+    }
+    return buffer;
+  }
+  
+  private boolean checkHavingValue(Having having) {
+    return having.getValue() != null && !having.getValue().isEmpty();
+  }
+  
+  private boolean checkHavingKey(Having having) {
+    return having.getKey() != null && !having.getKey().isEmpty();
+  }
+  
+  private boolean checkHavingOperator(Having having) {
+    return having.getOperator() != null && !having.getOperator().isEmpty();
   }
 
   private void addFilters(ReportCriteria report, StringBuilder path)
       throws UnsupportedEncodingException {
-    if (report.getFilters() != null && report.getFilters().size() > 0
-        && !report.getFilters().isEmpty()) {
+    if (report.getFilters() != null && !report.getFilters().isEmpty()) {
 
       if (path.indexOf("?") == -1) {
         path.append("?filter=");
@@ -265,27 +289,42 @@ public class ReportService {
         path.append("&filter=");
       }
 
-      int filterSize = 0;
-      StringBuilder buffer = new StringBuilder();
-      for (ReportFilter f : report.getFilters()) {
-        if (f.getKey() != null && f.getOperator() != null && f.getValue() != null
-            && !f.getKey().isEmpty() && !f.getOperator().isEmpty() && !f.getValue().isEmpty()) {
-
-          buffer.append(f.getKey() + f.getOperator() + f.getValue());
-          if (filterSize != report.getFilters().size() - 1) {
-            buffer.append("&");
-          }
-          filterSize++;
-        }
-      }
+      StringBuilder buffer = buildFilterCriteria(report);
       // encode
-      path.append(URLEncoder.encode(buffer.toString(), "UTF-8"));
+      path.append(URLEncoder.encode(buffer.toString(), UTF_8));
     }
+  }
+
+  private StringBuilder buildFilterCriteria(ReportCriteria report) {
+    int filterSize = 0;
+    StringBuilder buffer = new StringBuilder();
+    for (ReportFilter f : report.getFilters()) {
+      if (checkFilterKey(f) && checkFilterOperator(f) && checkFilterValue(f)) {
+        buffer.append(f.getKey() + f.getOperator() + f.getValue());
+        if (filterSize != report.getFilters().size() - 1) {
+          buffer.append("&");
+        }
+        filterSize++;
+      }
+    }
+    return buffer;
+  }
+  
+  private boolean checkFilterKey(ReportFilter f) {
+    return f.getKey() != null && !f.getKey().isEmpty();
+  }
+  
+  private boolean checkFilterOperator(ReportFilter f) {
+    return f.getOperator() != null && !f.getOperator().isEmpty();
+  }
+  
+  private boolean checkFilterValue(ReportFilter f) {
+    return f.getValue() != null && !f.getValue().isEmpty();
   }
 
   private void filterDimensions(ReportCriteria report, StringBuilder path)
       throws UnsupportedEncodingException {
-    if (report.getDimensions() != null && report.getDimensions().size() > 0) {
+    if (report.getDimensions() != null && !report.getDimensions().isEmpty()) {
 
       if (path.indexOf("?") == -1) {
         path.append("?dimensions=");
@@ -302,7 +341,7 @@ public class ReportService {
         }
       }
       // Encode
-      path.append(URLEncoder.encode(buffer.toString(), "UTF-8"));
+      path.append(URLEncoder.encode(buffer.toString(), UTF_8));
     }
   }
 
@@ -457,9 +496,7 @@ public class ReportService {
 
     Response response = connection.getReportData(finalPath, user);
     BufferedReader reader = null;
-    if (response.getMediaType().getType().equals("text")
-        && response.getMediaType().getSubtype().equals("xml") && response.getStatus() != 200) {
-
+    if ("text".equalsIgnoreCase(response.getMediaType().getType()) && "xml".equalsIgnoreCase(response.getMediaType().getSubtype()) && response.getStatus() != 200) {
       try {
 
         ObjectMapper xmlMapper = new XmlMapper();
@@ -478,8 +515,10 @@ public class ReportService {
         throw new ClientException("IO Exception Occured");
       }
 
-    } else if (response.getMediaType().getType().equals("text")
-        && response.getMediaType().getSubtype().equals("csv") && response.getStatus() == 200) {
+    } else if ("text".equalsIgnoreCase(response.getMediaType().getType()) 
+          && "csv".equalsIgnoreCase(response.getMediaType().getSubtype())
+          && response.getStatus() == 200) {
+      
       InputStream responseStream = response.readEntity(InputStream.class);
       reader = new BufferedReader(new InputStreamReader(responseStream));
     }
@@ -508,8 +547,7 @@ public class ReportService {
     Response response = connection.getReportData(finalPath, user);
     ReportValidationResponse re = null;
 
-    if (response.getMediaType().getType().equals("text")
-        && response.getMediaType().getSubtype().equals("xml")) {
+    if ("text".equalsIgnoreCase(response.getMediaType().getType()) && "xml".equalsIgnoreCase(response.getMediaType().getSubtype())) {
 
       try {
 
@@ -549,17 +587,24 @@ public class ReportService {
   private void parseErrorStatus(ReportError re, StringBuilder buffer) {
     if (re.getStatus() != null && re.getStatus().length > 0) {
       for (ReportStatus stats : re.getStatus()) {
-
-        if (stats.getCode() != null && !stats.getCode().isEmpty() && stats.getReason() != null
-            && !stats.getReason().isEmpty() && stats.getValue() != null
-            && !stats.getValue().isEmpty()) {
-
+        if (checkStatusCode(stats) && checkStatusReason(stats) && checkStatusValue(stats)) {
           buffer.append("Status[ Code: " + stats.getCode() + ", Reason: " + stats.getReason()
               + ", value: " + stats.getValue() + " ]");
-
         }
       }
     }
+  }
+  
+  private boolean checkStatusValue(ReportStatus stats) {
+    return stats.getValue() != null && !stats.getValue().isEmpty();
+  }
+  
+  private boolean checkStatusReason(ReportStatus stats) {
+    return stats.getReason() != null && !stats.getReason().isEmpty();
+  }
+
+  private boolean checkStatusCode(ReportStatus stats) {
+    return stats.getCode() != null && !stats.getCode().isEmpty();
   }
 
   private void parseErrorEntity(ReportError re, StringBuilder buffer) {
